# iotkit-comm-c

./: .gitignore  .jshintrc  .project  12commandments.txt  README.md
src-c/: CMakeLists.txt  Makefile  cmake_installedison.cmake.in  cmake_uninstall.cmake.in  doxygen.conf  install_manifest.txt
src-c/doc/: dir_2a5e64772440baf30af6ee2ca7d43e17.html  dir_3e05022667381b3559e37b1d9f606e21.html  dir_43f5a93fd5a58301df094533be585ee4.html  dir_96752b6fe34df9011119c8f5a5a27547.html  dir_b8f26be5c52bbc952a35c3d60d663eb5.html  edison-mqtt__async-client_8c.html  edison-mqtt__async-client_8h_source.html  edison-mqtt__async-service_8c.html  edison-mqtt__async-service_8h_source.html  files.html  index.html  sample__async__cloud-client_8c.html  sample__async__cloud-service_8c.html
src-c/doc/search/: all_1.js  search.js
src-c/edison-lib/: CMakeLists.txt
src-c/edison-lib/libedison/: CMakeLists.txt  Makefile  config.json  doxygen.conf  edisonMDNS.c  edisonMDNS.h  edisonapi.c  edisonapi.h  mainpage.md  util.h
src-c/edison-lib/libedison/doc/: annotated.html  classes.html  edisonMDNS_8c.html  edisonMDNS_8h.html  edisonMDNS_8h_source.html  edisonapi_8c.html  edisonapi_8h.html  edisonapi_8h_source.html  files.html  globals.html  index.html  (+25 more)
src-c/edison-lib/libpubsubstub/: pubsub.h  pubsubstub.c
src-c/edison-lib/plugins/: CMakeLists.txt
src-c/sample-apps/: CMakeLists.txt  doxygen.conf  mainpage.md  sample_zmqpubsub-client.c  sample_zmqpubsub-service.c  sample_zmqreqrep-client.c  sample_zmqreqrep-service.c
src-c/sample-apps-nonproduction/iotkit-apps/: Makefile  iotkit_pubsub.h
src-c/sample-apps/distributed-thermostat/: CMakeLists.txt  dashboard.c  mainpage.md  temperatureSensor.c  thermostat.c
src-c/sample-apps/doc/: dir_08bde507e2e3a173bd339c8a2fcddc6a.html  dir_52e72d4ff18c9e6b5b58090aee4cfeba.html  dir_8606f434960d13ff6d3d9cf050692a15.html  files.html  globals.html  globals_func.html  index.html  iotkit-publisher_8c.html  iotkit-subscriber_8c.html  publisher_8c.html  sample__async__cloud-client_8c.html  sample__async__cloud-service_8c.html  sample__zmqpubsub-client_8c.html  sample__zmqpubsub-service_8c.html  sample__zmqreqrep-client_8c.html  sample__zmqreqrep-service_8c.html  subscriber_8c.html
src-c/sample-apps/iotkit-apps/: CMakeLists.txt  Makefile  iotkit-publisher.c  iotkit-subscriber-direct.c  iotkit-subscriber-direct.h  iotkit-subscriber.c
src-c/sample-apps/mqtt/: sample.c
src-c/sample-apps/mqtt-apps/: CMakeLists.txt  Makefile  publisher.c  sample_async_cloud-client.c  sample_async_cloud-service.c  sample_async_cloud.c  subscriber.c
src-c/sample-apps/serviceQueries/: temperatureServiceQueryMQTT.json  temperatureSubscriberIoTKit.json
src-c/sample-apps/serviceSpecs/: temperatureServiceIoTKit.json  temperatureServiceMQTT.json  temperatureServiceZMQPUBSUB.json  temperatureServiceZMQREQREP.json
src-c/sample-apps/zmq-apps/: CMakeLists.txt  Makefile  sample_zmqpubsub-client.c  sample_zmqpubsub-service.c  sample_zmqreqrep-client.c  sample_zmqreqrep-service.c
src-c/tests/: CMakeLists.txt
src-c/tests/iotkitpubsub/: CMakeLists.txt  test_iotkitpubsub_client_connect_success.c  test_iotkitpubsub_client_publish_fail.c  test_iotkitpubsub_client_publish_success.c  test_iotkitpubsub_client_subscribe_fail.c  test_iotkitpubsub_client_subscribe_success.c  test_iotkitpubsub_client_unsubscribe_success.c
src-c/tests/libedison/: CMakeLists.txt  edison-client-interface.json  invalid-edison-service-interface.json  invalidtemperatureServiceMQTT.json  invalidtemperatureServiceQueryMQTT.json  invalidtemperatureServiceZMQPUBSUB.json  temperatureServiceMQTT.json  temperatureServiceZMQPUBSUB.json  test_edisonapi_createclient_fail.c  test_edisonapi_createclient_success.c  test_edisonapi_createservice_fail.c  test_edisonapi_createservice_success.c  test_edisonapi_loadcomminterfaces_fail.c  test_edisonapi_loadcomminterfaces_success.c  test_edisonapi_loadcommplugin_fail.c  test_edisonapi_loadcommplugin_success.c  test_edisonapi_parseconfigfile_fail.c  test_edisonapi_parseconfigfile_success.c  test_edisonapi_parseplugininterfaces_fail.c  test_edisonapi_parseplugininterfaces_success.c  test_mdns_advertiseservice_fail.c  test_mdns_advertiseservice_success.c  test_mdns_createclientforservice_fail.c  test_mdns_createclientforservice_success.c  test_mdns_discoverservice_fail.c  test_mdns_discoverservice_success.c  test_mdns_getaddressinfo_fail.c  test_mdns_getaddressinfo_pass.c  test_mdns_parse_servicedesc_fail.c  test_mdns_parse_servicedesc_success.c  test_mdns_parse_servicequery_fail.c  test_mdns_parse_servicequery_success.c
src-c/tests/mqttpubsub/: CMakeLists.txt  test_mqttpubsub_client_connect_success.c  test_mqttpubsub_client_publish_fail.c  test_mqttpubsub_client_publish_success.c  test_mqttpubsub_client_subscribe_fail.c  test_mqttpubsub_client_subscribe_success.c  test_mqttpubsub_client_unsubscribe_success.c
src-c/tests/zmqpubsub/: CMakeLists.txt  test_zmqpubsub_client_receive_fail.c  test_zmqpubsub_client_socket_connect_fail.c  test_zmqpubsub_client_socket_connect_success.c  test_zmqpubsub_client_subscribe_fail.c  test_zmqpubsub_client_subscribe_success.c  test_zmqpubsub_client_unsubscribe_fail.c  test_zmqpubsub_client_unsubscribe_success.c  test_zmqpubsub_service_publish_fail.c  test_zmqpubsub_service_socket_connect_fail.c  test_zmqpubsub_service_socket_connect_success.c
src-c/tests/zmqreqrep/: CMakeLists.txt  test_zmqreqrep_rep_receive_fail.c  test_zmqreqrep_rep_receive_success.c  test_zmqreqrep_rep_sendTo_fail.c  test_zmqreqrep_rep_sendTo_success.c  test_zmqreqrep_rep_socket_connect_fail.c  test_zmqreqrep_rep_socket_connect_success.c  test_zmqreqrep_req_receive_fail.c  test_zmqreqrep_req_send_fail.c  test_zmqreqrep_req_send_success.c  test_zmqreqrep_req_socket_connect_fail.c  test_zmqreqrep_req_socket_connect_success.c
src-c/tutorials/: application.md  client.md  cloud.md  plugin.md  service-spec-query.md  service.md  start-here.md  supported-plugins.md
src/examples/enableiot-apps/: CMakeLists.txt  enableiot-publisher.c  enableiot-subscriber.c  iotkit-publisher.c  iotkit-subscriber.c
(+486 files in other folders)
