
INCLUDE_DIRECTORIES(
  ../../edison-lib/cJSON
  ../../edison-lib/libedison
)

# set the source files list
SET(EDISONAPI_CREATECLIENT_FAIL test_edisonapi_createclient_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_CREATECLIENT_SUCCESS test_edisonapi_createclient_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_CREATESERVICE_FAIL test_edisonapi_createservice_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_CREATESERVICE_SUCCESS test_edisonapi_createservice_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_LOADCOMMINTERFACES_FAIL test_edisonapi_loadcomminterfaces_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_LOADCOMMINTERFACES_SUCCESS test_edisonapi_loadcomminterfaces_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_LOADCOMMPLUGIN_FAIL test_edisonapi_loadcommplugin_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_LOADCOMMPLUGIN_SUCCESS test_edisonapi_loadcommplugin_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_PARSECONFIGFILE_FAIL test_edisonapi_parseconfigfile_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_PARSECONFIGFILE_SUCCESS test_edisonapi_parseconfigfile_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_PARSEPLUGININTERFACES_FAIL test_edisonapi_parseplugininterfaces_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(EDISONAPI_PARSEPLUGININTERFACES_SUCCESS test_edisonapi_parseplugininterfaces_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_ADVERTISESERVICE_FAIL test_mdns_advertiseservice_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_ADVERTISESERVICE_SUCCESS test_mdns_advertiseservice_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_CREATECLIENTFORSERVICE_FAIL test_mdns_createclientforservice_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_CREATECLIENTFORSERVICE_SUCCESS test_mdns_createclientforservice_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_DISCOVERSERVICE_FAIL test_mdns_discoverservice_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_DISCOVERSERVICE_SUCCESS test_mdns_discoverservice_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_GETADDRESSINFO_SUCCESS test_mdns_getaddressinfo_pass.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_PARSE_SERVICEDESC_FAIL test_mdns_parse_servicedesc_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_PARSE_SERVICEDESC_SUCCESS test_mdns_parse_servicedesc_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_PARSE_SERVICEQUERY_FAIL test_mdns_parse_servicequery_fail.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)
SET(MDNS_PARSE_SERVICEQUERY_SUCCESS test_mdns_parse_servicequery_success.c ../../edison-lib/cJSON/cJSON.c ../../edison-lib/libedison/edisonapi.c ../../edison-lib/libedison/edisonMDNS.c)

# create the executables
ADD_EXECUTABLE(edisonapi_createclient_fail ${EDISONAPI_CREATECLIENT_FAIL})
ADD_EXECUTABLE(edisonapi_createclient_success ${EDISONAPI_CREATECLIENT_SUCCESS})
ADD_EXECUTABLE(edisonapi_createservice_fail ${EDISONAPI_CREATESERVICE_FAIL})
ADD_EXECUTABLE(edisonapi_createservice_success ${EDISONAPI_CREATESERVICE_SUCCESS})
ADD_EXECUTABLE(edisonapi_loadcomminterfaces_fail ${EDISONAPI_LOADCOMMINTERFACES_FAIL})
ADD_EXECUTABLE(edisonapi_loadcomminterfaces_success ${EDISONAPI_LOADCOMMINTERFACES_SUCCESS})
ADD_EXECUTABLE(edisonapi_loadcommplugin_fail ${EDISONAPI_LOADCOMMPLUGIN_FAIL})
ADD_EXECUTABLE(edisonapi_loadcommplugin_success ${EDISONAPI_LOADCOMMPLUGIN_SUCCESS})
ADD_EXECUTABLE(edisonapi_parseconfigfile_fail ${EDISONAPI_PARSECONFIGFILE_FAIL})
ADD_EXECUTABLE(edisonapi_parseconfigfile_success ${EDISONAPI_PARSECONFIGFILE_SUCCESS})
ADD_EXECUTABLE(edisonapi_parseplugininterfaces_fail ${EDISONAPI_PARSEPLUGININTERFACES_FAIL})
ADD_EXECUTABLE(edisonapi_parseplugininterfaces_success ${EDISONAPI_PARSEPLUGININTERFACES_SUCCESS})
ADD_EXECUTABLE(mdns_advertiseservice_fail ${MDNS_ADVERTISESERVICE_FAIL})
ADD_EXECUTABLE(mdns_advertiseservice_success ${MDNS_ADVERTISESERVICE_SUCCESS})
ADD_EXECUTABLE(mdns_createclientforservice_fail ${MDNS_CREATECLIENTFORSERVICE_FAIL})
ADD_EXECUTABLE(mdns_createclientforservice_success ${MDNS_CREATECLIENTFORSERVICE_SUCCESS})
ADD_EXECUTABLE(mdns_discoverservice_fail ${MDNS_DISCOVERSERVICE_FAIL})
ADD_EXECUTABLE(mdns_discoverservice_success ${MDNS_DISCOVERSERVICE_SUCCESS})
ADD_EXECUTABLE(mdns_getaddressinfo_success ${MDNS_GETADDRESSINFO_SUCCESS})
ADD_EXECUTABLE(mdns_parse_servicedesc_fail ${MDNS_PARSE_SERVICEDESC_FAIL})
ADD_EXECUTABLE(mdns_parse_servicedesc_success ${MDNS_PARSE_SERVICEDESC_SUCCESS})
ADD_EXECUTABLE(mdns_parse_servicequery_fail ${MDNS_PARSE_SERVICEQUERY_FAIL})
ADD_EXECUTABLE(mdns_parse_servicequery_success ${MDNS_PARSE_SERVICEQUERY_SUCCESS})

SET_TARGET_PROPERTIES(edisonapi_createclient_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_createclient_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_createservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_createservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_loadcomminterfaces_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_loadcomminterfaces_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_loadcommplugin_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_loadcommplugin_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_parseconfigfile_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_parseconfigfile_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_parseplugininterfaces_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(edisonapi_parseplugininterfaces_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_advertiseservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_advertiseservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_createclientforservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_createclientforservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_discoverservice_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_discoverservice_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_getaddressinfo_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicedesc_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicedesc_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicequery_fail PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(mdns_parse_servicequery_success PROPERTIES LINKER_LANGUAGE C)

# Link the executables
TARGET_LINK_LIBRARIES(edisonapi_createclient_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_createclient_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_createservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_createservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_loadcomminterfaces_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_loadcomminterfaces_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_loadcommplugin_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_loadcommplugin_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_parseconfigfile_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_parseconfigfile_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_parseplugininterfaces_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(edisonapi_parseplugininterfaces_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_advertiseservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_advertiseservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_createclientforservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_createclientforservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_discoverservice_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_discoverservice_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_getaddressinfo_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicedesc_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicedesc_success dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicequery_fail dns_sd m dl gcov)
TARGET_LINK_LIBRARIES(mdns_parse_servicequery_success dns_sd m dl gcov)

# Add the Test
ADD_TEST(edisonapi_createclient_fail ${CTEST_BINARY_DIRECTORY}/edisonapi_createclient_fail)
ADD_TEST(edisonapi_createclient_success ${CTEST_BINARY_DIRECTORY}/edisonapi_createclient_success)
ADD_TEST(edisonapi_createservice_fail ${CTEST_BINARY_DIRECTORY}/edisonapi_createservice_fail)
ADD_TEST(edisonapi_createservice_success ${CTEST_BINARY_DIRECTORY}/edisonapi_createservice_success)
ADD_TEST(edisonapi_loadcomminterfaces_fail ${CTEST_BINARY_DIRECTORY}/edisonapi_loadcomminterfaces_fail)
ADD_TEST(edisonapi_loadcomminterfaces_success ${CTEST_BINARY_DIRECTORY}/edisonapi_loadcomminterfaces_success)
ADD_TEST(edisonapi_loadcommplugin_fail ${CTEST_BINARY_DIRECTORY}/edisonapi_loadcommplugin_fail)
ADD_TEST(edisonapi_loadcommplugin_success ${CTEST_BINARY_DIRECTORY}/edisonapi_loadcommplugin_success)
ADD_TEST(edisonapi_parseconfigfile_fail ${CTEST_BINARY_DIRECTORY}/edisonapi_parseconfigfile_fail)
ADD_TEST(edisonapi_parseconfigfile_success ${CTEST_BINARY_DIRECTORY}/edisonapi_parseconfigfile_success)
ADD_TEST(edisonapi_parseplugininterfaces_fail ${CTEST_BINARY_DIRECTORY}/edisonapi_parseplugininterfaces_fail)
ADD_TEST(edisonapi_parseplugininterfaces_success ${CTEST_BINARY_DIRECTORY}/edisonapi_parseplugininterfaces_success)
ADD_TEST(mdns_advertiseservice_fail ${CTEST_BINARY_DIRECTORY}/mdns_advertiseservice_fail)
ADD_TEST(mdns_advertiseservice_success ${CTEST_BINARY_DIRECTORY}/mdns_advertiseservice_success)
ADD_TEST(mdns_createclientforservice_fail ${CTEST_BINARY_DIRECTORY}/mdns_createclientforservice_fail)
ADD_TEST(mdns_createclientforservice_success ${CTEST_BINARY_DIRECTORY}/mdns_createclientforservice_success)
ADD_TEST(mdns_discoverservice_fail ${CTEST_BINARY_DIRECTORY}/mdns_discoverservice_fail)
ADD_TEST(mdns_discoverservice_success ${CTEST_BINARY_DIRECTORY}/mdns_discoverservice_success)
ADD_TEST(mdns_getaddressinfo_success ${CTEST_BINARY_DIRECTORY}/mdns_getaddressinfo_success)
ADD_TEST(mdns_parse_servicedesc_fail ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicedesc_fail)
ADD_TEST(mdns_parse_servicedesc_success ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicedesc_success)
ADD_TEST(mdns_parse_servicequery_fail ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicequery_fail)
ADD_TEST(mdns_parse_servicequery_success ${CTEST_BINARY_DIRECTORY}/mdns_parse_servicequery_success)
